//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table block {
  hash String [pk, unique]
  number Int [unique, not null]
  tokens tokens_on_blocks [not null]
}

Table token {
  id String [pk, unique]
  token_id String [not null]
  mint_time DateTime [not null]
  token_asset_id String [not null]
  token_asset token_asset [not null]
  blocks tokens_on_blocks [not null]
  token_contract_id String [not null]
  contract token_contract [not null]
  owner_id String [not null]
  imported erc721_import_result_to_token [not null]
}

Table tokens_on_blocks {
  block block [not null]
  block_hash String [not null]
  token token [not null]
  token_id String [not null]
  created DateTime [default: `now()`, not null]

  indexes {
    (block_hash, token_id) [pk]
  }
}

Table token_asset {
  id String [pk, unique]
  referrers token [not null]
  token_uri String [unique, not null]
  ipnft String [not null]
  problem String
  metadata metadata
}

Table metadata {
  id String [pk, unique]
  cid String
  source_id String [unique, not null]
  source token_asset [not null]
  name String
  description String
  imageId String [not null]
  image_uri String [not null]
  assets resources_on_metadata [not null]
}

Table resource {
  referrers resources_on_metadata [not null]
  status resource_status [not null]
  status_text String [not null]
  uri String [pk, unique]
  ipfs_url String [unique, not null]
  problem String [not null]
  cid String
  content content
  created DateTime [default: `now()`, not null]
  updated DateTime [default: `now()`, not null]
}

Table resources_on_metadata {
  metadata metadata [not null]
  metadata_id String [not null]
  resource resource [not null]
  resource_uri String [not null]
  created DateTime [default: `now()`, not null]

  indexes {
    (metadata_id, resource_uri) [pk]
  }
}

Table content {
  cid String [pk, unique]
  resources resource [not null]
  dag_size Int
  pins pin [not null]
  created DateTime [default: `now()`, not null]
}

Table pin {
  id String [pk, unique]
  cid String [not null]
  content content [not null]
  location_id String [not null]
  location pin_location [not null]
  pin pin_status [not null]
  status_text String
  updated DateTime [default: `now()`, not null]
  created DateTime [default: `now()`, not null]
}

Table pin_location {
  id String [pk, unique]
  pins pin [not null]
  peer_id String [not null]
  peer_name String [not null]
  region String [not null]
}

Table token_contract {
  id String [pk, unique]
  name String [not null]
  symbol String [not null]
  supports_eip721_metadata Boolean [not null]
  tokens token [not null]
}

Table erc721_import_result {
  id String [pk, unique]
  next_id String [not null]
  tokens erc721_import_result_to_token [not null]
}

Table erc721_import_result_to_token {
  erc721_import_result erc721_import_result [not null]
  erc721_import_result_id String [not null]
  token token [not null]
  token_id String [not null]
  created DateTime [default: `now()`, not null]

  indexes {
    (erc721_import_result_id, token_id) [pk]
  }
}

Enum resource_status {
  Idle
  PinQueued
  Pinned
  FailedURIParse
  FailedFetch
  PinFailure
}

Enum token_asset_status {
  Queued
  Failed
  Succeeded
}

Enum pin_status {
  PinFailed
  Pinned
  Pinning
  PinQueued
}

Ref: token.token_asset_id > token_asset.id

Ref: token.token_contract_id > token_contract.id

Ref: tokens_on_blocks.block_hash > block.hash

Ref: tokens_on_blocks.token_id > token.id

Ref: metadata.source_id - token_asset.id

Ref: resource.cid > content.cid

Ref: resources_on_metadata.metadata_id > metadata.id

Ref: resources_on_metadata.resource_uri > resource.uri

Ref: pin.cid > content.cid

Ref: pin.location_id > pin_location.id

Ref: erc721_import_result_to_token.erc721_import_result_id > erc721_import_result.id

Ref: erc721_import_result_to_token.token_id > token.id